@startuml IdentityModule
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
hide circle

' === Tables ===

Table(Blog, "Blog") {
    +Id : uniqueidentifier
    CategoryId : uniqueidentifier
    BannerId : uniqueidentifier
    Title : nvarchar
    Slug : nvarchar
    Content : nvarchar(max)
    IsPublished : bit
    AuthorId : nvarchar
  }

  Table(Banner, "Banner") {
    +Id : uniqueidentifier
    url : nvarchar
    width : int
    height : int
  }

  Table(Comment, "Comment") {
    +Id : uniqueidentifier
    BlogId : uniqueidentifier
    ParentId : uniqueidentifier
    UserId : nvarchar
    Content : nvarchar(max)
  }

  Table(Like, "Like") {
    +Id : uniqueidentifier
    BlogId : uniqueidentifier
    UserId : uniqueidentifier
    CommentId : uniqueidentifier
  }

  Table(Tag, "Tag") {
    +Id : uniqueidentifier
    Name : nvarchar
  }

  Table(BlogTag, "BlogTag") {
    +Id : uniqueidentifier
    BlogId : uniqueidentifier
    TagId : uniqueidentifier
  }

  Table(Category, "Category") {
    +Id : uniqueidentifier
    Name : nvarchar
    Slug : nvarchar
  }

' === Relationships ===

  Blog --> Comment : has
  Blog --> Banner : has
  Blog --> Like : receives
  Blog --> BlogTag : has
  Tag --> BlogTag : belongs to
  Comment --> Comment : replies
  Category --> Blog : categorizes
}

@enduml
